plugins/agiledashboard/www/themes/default/css/style.css
#planner {
    position: relative;
}
#planner .planner_feedback {
    text-align: center;
    opacity: 0;
    visibility: hidden;
    -webkit-transition: visibility 0s linear 0.5s,opacity 0.5s linear;
    -moz-transition: visibility 0s linear 0.5s,opacity 0.5s linear;
    -o-transition: visibility 0s linear 0.5s,opacity 0.5s linear;
    transition: visibility 0s linear 0.5s,opacity 0.5s linear;
}
#planner .planner_feedback > div {
    display: inline-block;
    margin: 0 auto;
}
#planner .planner_feedback > div > .feedback_info,
#planner .planner_feedback > div > .feedback_warning {
    margin: 0;
}
#planner.show_feedback .planner_feedback {
    opacity: 1;
    visibility: visible;
    transition-delay: 0s;
}
.agiledashboard .tracker_report_criteria_advanced_toggle {
    display: none;
}

.agiledashboard label {
    font-weight: bold;
}

.planning-backlog > table {
    width: 100%;
}
.planning-backlog .tracker_report_query {
    z-index: inherit;
}
.agiledashboard .release_planner {
    border: 1px solid lightgray;
    padding: 0 0.5em;
}

.release_planner > .tracker_artifact_title {
    margin-bottom:0;
    margin-top: 0.5em;
}
.release_planner > .help {
    color: #999;
    margin-top: 0;
}
.agiledashboard .cards {
  list-style: none;
  margin: 0;
  padding: 0;
}
.agiledashboard .cards .cards {
  margin-left: 2em;
}

.planning-item > .card,
.planning-item > .card > .card-container {
    background: #f8f8f8;
}

.planning-item.planning-draggable > .card,
.planning-item.planning-draggable > .card > .card-container {
    background: #ffe;
    font-style: normal;
}

.milestone-content > ul.cards,
.backlog-content > ul.cards {
    min-height: 1.5em;
}

.backlog-actions, 
.card-actions {
    float:right;
}

.backlog-content {
    clear:both;
    padding-top: 0.5em;
}
.release_planner {
    background: white;
}

.planning-backlog-hover .tracker_report_renderer,
.planning-droppable-hover {
    background: #fcfcfc;
    -moz-box-shadow:1px 1px 3px rgba(33,33,33, .7) inset;
    -webkit-box-shadow: 1px 1px 3px rgba(33,33,33,.7) inset;
    box-shadow: 1px 1px 3px rgba(33,33,33,.7) inset;
}

.planning-artifact-chooser {
    padding: 0.5em 1em;
}
.planning-artifact-chooser > option {
}

/* {{{ same as card-actions in tracker style.css */
.backlog-actions {
    float:right;
}
.backlog-actions ul {
    list-style: none;
    padding: 0.25em 0.5em;
}
.backlog-actions .caret {
  margin-top: 6px;
}
.backlog-actions:hover .caret {
  opacity: 1;
  filter: alpha(opacity=100);
}
.backlog-actions .dropdown.open .dropdown-toggle {
    color: #005580;
    background: none;
}
/* }}} */

.agiledashboard hr {
    border:0px; 
    border-top:1px solid #ccc;
}

.toggle-collapse {
    display: inline-block;
    width: .8em;
}

.planning_overcapacity {
    font-weight: bold;
}

.planning_overcapacity .planning_remaining_effort {
    color: red;
}

.card-planning-controls {
    position: absolute;
    bottom: 0;
    right: 0;
    opacity:0.1;
}
.card:hover > .card-planning-controls {
    opacity:0.5;
}
.card > .card-planning-controls:hover {
    opacity:1;
}

.card-planning-controls > div {
    padding: 0.5em 0.5em 0em;
    background: rgba(128, 128, 128, 0.1);
    -webkit-border-top-left-radius: 1em;
    -moz-border-radius-topleft: 1em;
    border-top-left-radius: 1em;
}
.card-planning-controls > div > i {
    cursor: pointer;
    opacity:0.5;
}
.card-planning-controls > div > i:hover {
    opacity:1;
}

.ad_index_plannings {
    list-style: none;
    margin: 0;
    padding: 1em;
    text-align: center;
}
.ad_index_planning {
    margin-right: 1em;
    text-align: left;
    
    background: #fcfcfc;
    min-width: 100px;
    border:1px solid #ccc;
    padding: 0.25em 0em;
    border-radius: 0.5em;
    
    display: inline-block;
    zoom: 1;
    *display: inline;
    vertical-align: top;
    position: relative;
}
.ad_index_planning > .dropdown {
    margin: auto 1em;
}
.ad_index_planning > ul {
    list-style: none;
    margin: auto 0;
    padding: 0;
}
.ad_index_planning > ul > li {
    clear: both;
    padding: 0.25em 1em;
}
.ad_index_planning > ul > li.active {
    background: #eee;
}
.ad_index_planning > .dropdown > a:hover {
    text-decoration: none;
}
.ad_index_planning > .dropdown > a > h2 {
    color: #333;
}
.ad_index_planning_icons {
    margin-left:0.5em;
    float:right;
}

.release-date-info {
    margin-top: -0.5em;
    margin-bottom: 1em;
    font-size: 1.5em;
    color: #999;
}

#topplanning table,
#planning table,
#blcontent table {
    border-spacing: 0;
}

#topblcontent table,
#blcontent table {
    width: auto;
}
.submilestone-element-rows > tbody > tr,
.milestone-content-open-rows > tr {
    cursor: move;
}
.milestone-content-open-rows .ui-sortable-helper {
  -webkit-box-shadow: 0 1px 4px rgba(0,0,0,.065);
     -moz-box-shadow: 0 1px 4px rgba(0,0,0,.065);
          box-shadow: 0 1px 4px rgba(0,0,0,.065);
}
.milestone-content-open-rows .ui-sortable-helper > td {
    border-bottom: 1px solid #dddddd;
}

.table .agiledashboard-planning-submilestones-addnew,
.table .agiledashboard-planning-submilestone-header-info {
    text-align: right;
    border-left: none;
    white-space: nowrap;
}

.table .agiledashboard-planning-submilestone-header > th {
    cursor: pointer;
    background-color: #EBEBEB;
}

.submilestone-data > a {
    float: right;
}

.agiledashboard-planning-submilestone-header > th:first-child {
    color: #067EC9;
}

.empty-table-placeholder > td {
    text-align: center;
    font-style: italic;
    cursor: default;
}

.empty-table-placeholder {
    display: none;
}

